# examples_folium

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt
data/: statistical-area-1-2019-clipped-generalised.gpkg
notebooks/: categorical_legend.ipynb
notebooks/.ipynb_checkpoints/: examples-checkpoint.ipynb
