[tool.poetry]
name = "examples_folium"
version = "1.0.0"
description = "Python 3.8+ Jupyter notebooks illustrating our common use of the Folium library"
authors = ["Alex Raichev <araichev@mrcagney.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
folium = "^0.10.1"
matplotlib = "^3.2.1"
branca = "^0.4.0"
geopandas = "^0.7.0"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
